--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-	"name": "fkem-content-manager",
-	"description": "Angular and NodeJS web app for creating and persisting content used in the FKEM mobile game. Content is stored in JSON format.",
-	"private": true,
-	"scripts": {
-		"start": "live-server"
-	},
-	"dependencies": {
-		"angular2": "2.0.0-beta.0",
-		"es6-promise": "^3.0.2",
-		"es6-shim": "^0.33.3",
-		"reflect-metadata": "0.1.2",
-		"rxjs": "5.0.0-beta.0",
-		"systemjs": "0.19.8",
-		"zone.js": "0.5.10"
-	},
-	"devDependencies": {
-		"live-server": "^0.8.2",
-		"typescript": "1.7.5"
-	}
+  "name": "fkem-content-manager",
+  "description": "Angular and NodeJS web app for creating and persisting content used in the FKEM mobile game. Content is stored in JSON format.",
+  "private": true,
+  "scripts": {
+    "start": "live-server"
+  },
+  "dependencies": {
+    "angular2": "2.0.0-beta.0",
+    "bootstrap": "^3.3.6",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "jquery": "^2.2.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "systemjs": "0.19.8",
+    "zone.js": "0.5.10"
+  },
+  "devDependencies": {
+    "live-server": "^0.8.2",
+    "typescript": "1.7.5"
+  }
 }
